System-Design/centralized-configuration-managemnt-system/infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: config-management
  labels:
    name: config-management
    environment: production
