System-Design/centralized-configuration-managemnt-system/infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: config-management
  labels:
    app: config-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: config-service
